src/test/resources/Parser/SyntaxErrors/IncompatibleTypesFor.front
class A {
    void test () {
        for(;1;){}
    }
}